--- a/consumer/Jenkinsfile
+++ b/consumer/Jenkinsfile
@@ -4,13 +4,7 @@ node{
       
    stage 'checkout'
          
-          checkout([$class: 'GitSCM', branches: [[name: '*/*']], extensions: [], userRemoteConfigs: [[credentialsId: 'cdad465b-1d65-4b41-bce7-da95a887c7f4', url: 'https://github.com/ganeshm681/simple-java-maven-app.git']]])
-echo "build starts"
-   
-   def mvnHome = tool 'Maven 3'
-   stage 'build'
-   sh "${mvnHome}/bin/mvn -B -DskipTests clean package"
-
+   checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: '8f78f1e6-e341-429d-b77e-86d25ec06159', url: 'https://github.com/ganeshm681/proc-proj.git']]])
 echo "build completed"
 
 }
